--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,20 @@
 
 body {
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 250px 3fr;
+    grid-template-rows: 100px repeat(3, 1fr);
     height: 100vh;
 }
 
 .side-bar {
     grid-column: 1/2;
     grid-row: 1/4;
-    background-color: blueviolet;
+    background-color: #1E252B;
     height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 6rem;
+    padding-inline: 2rem;
 }
 
 .header {
@@ -28,4 +32,8 @@ body {
     grid-column: 2/3;
     grid-row: 2/4;
     background: green;
+}
+
+.text {
+    color: #fff;
 }
