Course allocation system

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 .side-bar {
     grid-column: 1/2;
-    grid-row: 1/4;
+    grid-row: 1/5;
     background-color: #1E252B;
     height: 100vh;
 }
@@ -40,11 +40,56 @@ body {
 
 .main-content {
     grid-column: 2/3;
-    grid-row: 2/4;
+    grid-row: 2/5;
     background: green;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 150px 150px 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    padding: 5rem;
+    gap: 2rem;
 }
 
 .text {
     color: #fff;
     margin-top: 1.2rem;
+}
+
+.content-1 {
+    background: rgb(27, 196, 92);
+}
+
+.content-2 {
+    background: rgb(74, 168, 199);
+    grid-column: 2/4;
+}
+
+.content-3 {
+    background: red;
+}
+
+.content-4 {
+    background: rgb(173, 80, 80);
+    grid-column: 1/-3;
+}
+
+.content-5 {
+    background: blue;
+}
+
+.content-6 {
+    background: #b38d12;
+    grid-column: 4/5;
+    grid-row: 2/4;
+}
+
+.content-7 {
+    background: rgb(74, 168, 199);
+}
+
+.content-8 {
+    background: teal;
+    grid-column: 2/4;
 }
