--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,14 @@
 body {
     display: grid;
     grid-template-columns: 250px 3fr;
-    grid-template-rows: 100px repeat(3, 1fr);
+    grid-template-rows: 70px repeat(4, 1fr);
     height: 100vh;
 }
 
 .side-bar {
     grid-column: 1/2;
-    grid-row: 1/5;
+    grid-row: 1/6;
     background-color: #1E252B;
-    height: 100vh;
 }
 
 .side-bar-contents {
@@ -35,13 +34,17 @@ body {
 .header {
     grid-column: 2/3;
     grid-row: 1/2;
-    background: yellow;
+    background-color: #3d3b3b;
 }
 
 .main-content {
     grid-column: 2/3;
-    grid-row: 2/5;
+    grid-row: 2/3;
     background: green;
+    background: url('../assets/img/background-desk.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 .grid {
@@ -92,4 +95,15 @@ body {
 .content-8 {
     background: teal;
     grid-column: 2/4;
+}
+
+.box {
+    padding: 1rem;
+    display: grid;
+    place-items: center;
+}
+
+.content-6 .text {
+    position: relative;
+    top: -4.5rem;
 }
