Course allocation system

--- a/css/faculty.css
+++ b/css/faculty.css
@@ -40,11 +40,19 @@
     .main-content {
         grid-column: 2/3;
         grid-row: 2/6;
-        background: green;
+        background: url('../assets/img/background-desk.jpeg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        padding: 3rem;
+        padding-top: 5rem;
+        gap: 2rem;
     }
     
     .grid {
         display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
     }
     
     .text {
@@ -73,4 +81,10 @@
     
     .grid-content-6 {
         background-color: khaki;
+    }
+    
+    .box {
+        padding: 2rem;
+        display: grid;
+        place-items: center;
     }
