--- a/css/style.css
+++ b/css/style.css
@@ -150,3 +150,11 @@ form>button {
     border-radius: 5px;
     cursor: pointer;
 }
+
+form>select {
+    margin-block: 10px;
+    width: 400px;
+    height: 35px;
+    border-radius: 5px;
+    border: 1px solid grey;
+}
