--- a/css/display.css
+++ b/css/display.css
@@ -43,4 +43,30 @@ h1 {
 main {
     background-color: rgb(178, 224, 240, 0.5);
     min-height: 100vh;
+    padding-inline: 100px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.btn-link {
+    text-decoration: none;
+    background-color: skyblue;
+    padding: 15px;
+    position: absolute;
+    right: 40px;
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+table {
+    margin-top: 200px;
+    background-color: white;
+}
+
+table tr {
+    border: 1px solid rgb(27, 27, 27, 0.3);
+    border-collapse: collapse;
+    width: 100%;
 }
