--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ body {
     font-size: 1.5rem;
 }
 
-a {
+.main-content a {
     text-decoration: none;
 }
 
@@ -159,4 +159,9 @@ form>select {
     height: 35px;
     border-radius: 5px;
     border: 1px solid grey;
+}
+
+.a-tag {
+    text-decoration: none;
+    color: white;
 }
