--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     grid-column: 1/2;
     grid-row: 1/6;
     background-color: #1E252B;
+    min-height: 100vh;
 }
 
 .side-bar a {
@@ -43,7 +44,7 @@ body {
 
 .main-content {
     grid-column: 2/3;
-    grid-row: 2/3;
+    grid-row: 2/6;
     background: green;
     background: url('../assets/img/background-desk.jpeg');
     background-repeat: no-repeat;
@@ -54,7 +55,7 @@ body {
 .grid {
     display: grid;
     grid-template-columns: 1fr 150px 150px 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     padding: 5rem;
     gap: 2rem;
 }
