--- a/css/faculty.css
+++ b/css/faculty.css
@@ -101,3 +101,13 @@
     .side-bar a {
         text-decoration: none;
     }
+    
+    .logout {
+        position: absolute;
+        right: 20px;
+        text-decoration: none;
+        background-color: blue;
+        padding-inline: 15px;
+        padding-block: 5px;
+        color: #fff;
+    }
