--- a/css/stude-lec.css
+++ b/css/stude-lec.css
@@ -215,3 +215,13 @@ form select {
     border: none;
     cursor: pointer;
 }
+
+.logout {
+    position: absolute;
+    right: 20px;
+    text-decoration: none;
+    background-color: blue;
+    padding-inline: 15px;
+    padding-block: 5px;
+    color: #fff;
+}
