--- a/css/style.css
+++ b/css/style.css
@@ -170,3 +170,13 @@ form>select {
     text-decoration: none;
     color: white;
 }
+
+.logout {
+    position: absolute;
+    right: 20px;
+    text-decoration: none;
+    background-color: blue;
+    padding-inline: 15px;
+    padding-block: 5px;
+    color: #fff;
+}
