--- a/css/display.css
+++ b/css/display.css
@@ -103,7 +103,7 @@ table tr {
     color: #fff;
 }
 
-.label-box {
+.labell-box {
     position: relative;
     top: 100px;
     left: 70px;
@@ -126,4 +126,14 @@ table tr {
     margin-top: 10px;
     font-size: 1.1rem;
     border: none;
+}
+
+.logout {
+    position: absolute;
+    right: 20px;
+    text-decoration: none;
+    background-color: blue;
+    padding-inline: 15px;
+    padding-block: 5px;
+    color: #fff;
 }
